# CodenameMaster

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pythonpackage.yml
codename_master/: __init__.py
codename_master/estimator/: make_estimation_table.py
codename_master/guesser/: word_guesser_base.py
codename_master/guesser/llm/: chatgpt_connection_checker.py  chatgpt_error.py  chatgpt_guesser.py
codename_master/guesser/wordnet/: convert_wordnet_scores.py  make_connected_words_table.py  wordnet_guesser.py
codename_master/model/: sample.py
codename_master/ocr/: read_board.py
codename_master/runner/: estimator_pipeline_base.py  estimator_pipeline_v01.py  estimator_pipeline_v02.py
codename_master/score_aggregator/: score_aggregator.py
codename_master/streamlit_ui/: run_estimator.py
codename_master/target_words/: get_board_words.py
codename_master/utils/: template.py
scripts/: run_streamlit.py
scripts/estimator/: estimator_v01_wordnet.py  estimator_v02_gpt.py
scripts/streamlit/: run_v01_wordnet.py  run_v02_gpt.py
scripts/wordnet_dev_scripts/: 2024-08-25_距離関数の検討.ipynb  make_wordnet_sense_words.py
test/unit_test/: test_sample.py
test/unit_test/estimator/: test_make_estimation_table.py
test/unit_test/guesser/llm/: test_chatgpt_connection_checker.py  test_chatgpt_guesser.py
test/unit_test/guesser/wordnet/: test_convert_wordnet_scores.py  test_make_connected_words_table.py
